--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -1,13 +1,19 @@
+\noindent\href{mailto:daniel.abercrombie@cern.ch}{Daniel Abercrombie} 
+\emph{MIT, USA}\\
 \noindent\href{mailto:nural.akchurin@cern.ch}{Nural Akchurin} 
 \emph{Texas Tech University, USA}\\
 \noindent\href{mailto:ece.akilli@cern.ch}{Ece Akilli} 
 \emph{Universit\'e de Gen\`eve, DPNC, Switzerland}\\
 \noindent\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz Maestre} 
 \emph{Centro de Investigaciones Energ\'eticas Medioambientales y Tecnol\'ogicas (CIEMAT), Spain}\\
+\noindent\href{mailto:brandon.leigh.allen@cern.ch}{Brandon Allen} 
+\emph{MIT, USA}\\
 \noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea} 
 \emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
+\noindent\href{mailto:alexandre.arbey@ens-lyon.fr}{Alexandre Arbey} 
+\emph{Universit\'e de Lyon and Centre de Recherche Astrophysique de Lyon, CNRS and Ecole Normale Sup\'erieure de Lyon, Lyon and CERN Theory Division, NO COUNTRY}\\
 \noindent\href{mailto:georges.azuelos@cern.ch}{Georges Azuelos} 
 \emph{University of Montreal and TRIUMF, Canada}\\
 \noindent\href{mailto:Patrizia.Azzi@cern.ch}{Patrizia Azzi} 
@@ -42,6 +48,10 @@
 \emph{Ohio State University, USA}\\
 \noindent\href{mailto:nuno.castro@cern.ch}{Nuno Filipe Castro} 
 \emph{LIP-Minho, Braga, and Departamento de F\'\i sica e Astronomia, Faculdade de Ci\^ encias da Universidade do Porto, Portugal}\\
+\noindent\href{mailto:guillelmo.gomez.ceballos@cern.ch}{Guillelmo Gomez Ceballos} 
+\emph{MIT, USA}\\
+\noindent\href{mailto:Yangyang.Cheng@cern.ch}{Yangyang Cheng} 
+\emph{University of Chicago, USA}\\
 \noindent\href{mailto:john.paul.chou@cern.ch}{John Paul Chou} 
 \emph{Rutgers University, USA}\\
 \noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzalez} 
@@ -58,6 +68,8 @@
 \emph{SISSA and INFN, Sezione di Trieste, Italy}\\
 \noindent\href{mailto:deandrea@ipnl.in2p3.fr}{Aldo Deandrea} 
 \emph{Universit\'e de Lyon and Universit\'e Lyon 1, CNRS/IN2P3, UMR5822, IPNL, France}\\
+\noindent\href{mailto:zeynep.demiragli@cern.ch}{Zeynep Demiragli} 
+\emph{MIT, USA}\\
 \noindent\href{mailto:adifranz@uci.edu}{Anthony DiFranzo} 
 \emph{Department of Physics and Astronomy, University of California, Irvine and Theoretical Physics Department, Fermilab, USA}\\
 \noindent\href{mailto:caterina.doglioni@cern.ch}{Caterina Doglioni (editor)} 
@@ -98,8 +110,12 @@
 \emph{RWTH Aachen University, III. Physikalisches Institut A, Germany}\\
 \noindent\href{mailto:siew.yan.hoh@cern.ch}{Siew Yan Hoh} 
 \emph{National Centre for Particle Physics, Universiti Malaya, Malaysia}\\
+\noindent\href{mailto:dylan.hsu@cern.ch}{Dylan George Hsu} 
+\emph{MIT, USA}\\
 \noindent\href{mailto:schsu@uw.edu}{Shih-Chieh Hsu} 
 \emph{University of Washington, USA}\\
+\noindent\href{mailto:Yutaro.Iiyama@cern.ch}{Yutaro Iiyama} 
+\emph{MIT, USA}\\
 \noindent\href{mailto:valerio.ippolito@cern.ch}{Valerio Ippolito} 
 \emph{Laboratory for Particle Physics and Cosmology, Harvard University, USA}\\
 \noindent\href{mailto:thomas.jacques@unige.ch}{Thomas Jacques} 
@@ -154,6 +170,8 @@
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:mrenna@fnal.gov}{Stephen Mrenna (editor)} 
 \emph{FNAL, USA}\\
+\noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M Narayanan} 
+\emph{MIT, USA}\\
 \noindent\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson} 
 \emph{University of California, Irvine, USA}\\
 \noindent\href{mailto:Sergio.Novaes@cern.ch}{S\'ergio F. Novaes} 
@@ -166,6 +184,8 @@
 \emph{Theoretical Physics Group, Lawrence Berkeley National Laboratory, and Berkeley Center for Theoretical Physics, University of California, Berkeley, USA}\\
 \noindent\href{mailto:paulini@heps.phys.cmu.edu}{Manfred Paulini} 
 \emph{Carnegie Mellon University, USA}\\
+\noindent\href{mailto:paus@mit.edu}{Christoph Paus} 
+\emph{MIT, USA}\\
 \noindent\href{mailto:Jacopo.Pazzini@pd.infn.it}{Jacopo Pazzini} 
 \emph{Universit\`a di Padova, Italy}\\
 \noindent\href{mailto:Bjoern.Penning@cern.ch}{Bj\"orn Penning} 
