Yet some more small updates.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@415 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -64,6 +64,8 @@
 \emph{University of Zurich, Switzerland}\\
 \noindent\href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola} 
 \emph{CERN, Switzerland}\\
+\noindent\href{mailto:deroeck@mail.cern.ch}{Albert De Roeck} 
+\emph{CERN, Switzerland}\\
 \noindent\href{mailto:andrea.desimone@sissa.it}{Andrea De Simone} 
 \emph{SISSA and INFN, Sezione di Trieste, Italy}\\
 \noindent\href{mailto:deandrea@ipnl.in2p3.fr}{Aldo Deandrea} 
@@ -95,7 +97,7 @@
 \noindent\href{mailto:Andreas.Goudelis@oeaw.ac.at}{Andreas Goudelis} 
 \emph{Institut f\"ur Hochenergiephysik, \"Osterreichische Akademie der Wissenschaften, Austria}\\
 \noindent\href{mailto:johanna.gramling@cern.ch}{Johanna Gramling} 
-\emph{Universit\'e de Gen\`eve, Ecole de Physique, Switzerland}\\
+\emph{Universit\'e de Gen\`eve, DPNC, Switzerland}\\
 \noindent\href{mailto:gunion@physics.ucdavis.edu}{John Gunion} 
 \emph{University of California, Davis, USA}\\
 \noindent\href{mailto:kristian.hahn@cern.ch}{Kristian Hahn} 
@@ -234,6 +236,8 @@
 \emph{Laboratoire de Physique Corpusculaire, Clermont Universit\'e and Universit\'e Blaise Pascal and CNRS/IN2P3, Clermont-Ferrand, France}\\
 \noindent\href{mailto:M.C.Thomas@soton.ac.uk}{Marc Thomas} 
 \emph{Southampton University, United Kingdom}\\
+\noindent\href{mailto:mia.tosi@cern.ch}{Mia Tosi} 
+\emph{University of Padova and INFN, Italy}\\
 \noindent\href{mailto:Daniele.Trocino@cern.ch}{Daniele Trocino} 
 \emph{Northeastern University, Boston, USA}\\
 \noindent\href{mailto:sonaina.undleeb@ttu.edu}{Sonaina Undleeb} 
