--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -765,7 +765,7 @@ Like in the case of the vector and axial-vector models described in Section~\ref
 
 \subsubsection{Proposed parameter grid}
 
-The optimized parameter grid in the $\mMed$--$\mDM$ plane for scalar and pseudo-scalar mediators is motivated by similar arguments as in the previous section. Therefore, a similar pattern is followed here, with the exception of taking $\gq=\gDM=1$. The choice of $\gq=0.25$ for the vector and axial-vector models is motivated by suppressing constraints from di-jets, which is not a concern in the scalar and pseudo-scalar mediator case. Here a di-jet signal emerges only at the 2-loop level through diagrams where the mediator is produced via gluon-gluon fusion and decays back into two gluons through a top loop. The strong loop suppression renders such signals unobservable at the LHC. Further constraints on the scalar and pseudo-scalar mediators may emerge from searches in $t\bar{t}$ final states. Studies of the electroweak effects to $t\bar{t}$ production suggest that one can only expect percent level contributions for $\gq \sim O(1)$ \cite{Haisch:2013fla}. Therefore, keeping $\gq=\gDM=1$ is a reasonable choice in the case of the scalar and pseudo-scalar mediators. Contrary to the vector and axial-vector models, note that couplings of 1 lead to $\Gamma_{\rm{min}}/\mMed \lsim 0.04$, ensuring the narrow width approximation is applicable. Furthermore, the sensitivity to the highest mediator masses has to be re-evaluated. The generator level cross section times the acceptance at $\MET>500$~\gev for the model with couplings $\gq=\gDM=1$, light Dark Matter of \mDM=10~\gev and a \mMed=500~\gev scalar mediator is at the order of 10\,fb, i.e. just at the edge of the early Run-2 sensitivity. Increasing the mediator mass to 1~\tev pushes the product $\sigma\times A$ down to approximately 0.1\,fb, below the LHC sensitivity. Therefore, we choose to remove the 2~\tev mediator mass from the grid and present the final grid with 33 mass points only, as shown in Tab.\,\ref{tab:mDMmMedScan_SP}. One point at very high mediator mass (10~\tev) is added for each of the DM masses scanned, to aid the reinterpretation of results in terms of contact interaction operators (EFTs).
+The optimized parameter grid in the $\mMed$--$\mDM$ plane for scalar and pseudo-scalar mediators is motivated by similar arguments as in the previous section. Therefore, a similar pattern is followed here, with the exception of taking $\gq=\gDM=1$. The choice of $\gq=0.25$ for the vector and axial-vector models is motivated by suppressing constraints from di-jets, which is not a concern in the scalar and pseudo-scalar mediator case. Here a di-jet signal emerges only at the 2-loop level through diagrams where the mediator is produced via gluon-gluon fusion and decays back into two gluons through a top loop. The strong loop suppression renders such signals unobservable at the LHC. Further constraints on the scalar and pseudo-scalar mediators may emerge from searches in $t\bar{t}$ final states. Studies of the electroweak effects to $t\bar{t}$ production suggest that one can only expect percent level contributions for $\gq \sim O(1)$ \cite{Haisch:2013fla}. Therefore, keeping $\gq=\gDM=1$ is a reasonable choice in the case of the scalar and pseudo-scalar mediators. Contrary to the vector and axial-vector models, note that couplings of 1 lead to $\Gamma_{\rm{min}}/\mMed \lsim 0.1$, ensuring the narrow width approximation is applicable. Furthermore, the sensitivity to the highest mediator masses has to be re-evaluated. The generator level cross section times the acceptance at $\MET>500$~\gev for the model with couplings $\gq=\gDM=1$, light Dark Matter of \mDM=10~\gev and a \mMed=500~\gev scalar mediator is at the order of 10\,fb, i.e. just at the edge of the early Run-2 sensitivity. Increasing the mediator mass to 1~\tev pushes the product $\sigma\times A$ down to approximately 0.1\,fb, below the LHC sensitivity. Therefore, we choose to remove the 2~\tev mediator mass from the grid and present the final grid with 33 mass points only, as shown in Tab.\,\ref{tab:mDMmMedScan_SP}. One point at very high mediator mass (10~\tev) is added for each of the DM masses scanned, to aid the reinterpretation of results in terms of contact interaction operators (EFTs).
 
 \begin{table}[!h]
 \centering
@@ -802,7 +802,7 @@ decaying to Dirac DM fermions in the scalar and pseudoscalar case, taking the mi
 % \end{figure}
 
 
-For the parameter grid for scalar and pseudo-scalar mediator \schannel exchange, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell regime, the ratio is $\sim0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where the mediator is off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
+For the parameter grid for scalar and pseudo-scalar mediator \schannel exchange, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell regime, the ratio is between 0.04 and 0.1. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where the mediator is off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
 
 
 \begin{table}
@@ -814,16 +814,16 @@ For the parameter grid for scalar and pseudo-scalar mediator \schannel exchange,
 			&         10  & 20 & 50 & 100 & 200 & 300 & 500 &         1000  & 10000  \\
 			\hline
 			\hline
-			1 & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.041  & 0.043  & 0.043  \\
-			10 &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        &        &        & 0.043  \\
-			50 &$<$0.001&        &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        & 0.043  \\
-			150 &$<$0.001&        &        &        &$<$0.001&$<$0.001& 0.041  & 0.043  & 0.043  \\
-			500 &$<$0.001&        &        &        &        &        & 0.001  & 0.003  & 0.043  \\
-			1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
+   1 & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.062  & 0.089  & 0.099  \\
+  10 &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        &        &        & 0.099  \\
+  50 &$<$0.001&        &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        & 0.099  \\
+ 150 &$<$0.001&        &        &        &$<$0.001&$<$0.001& 0.062  & 0.089  & 0.099  \\
+ 500 &$<$0.001&        &        &        &        &        & 0.022  & 0.049  & 0.099  \\
+1000 &$<$0.001&        &        &        &        &        &        & 0.049  & 0.099  \\
 			\hline
 		\end{tabular}}
 		\caption%[][5cm]
-		{Minimal width of the scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+		{Minimal width of the scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
 		\label{tab:widthS}
 	\end{table}
 	
@@ -837,16 +837,16 @@ For the parameter grid for scalar and pseudo-scalar mediator \schannel exchange,
 				&         10  & 20 & 50 & 100 & 200 & 300 & 500 &         1000  & 10000  \\
 				\hline
 				\hline
-				1 & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.042  & 0.043  & 0.043  \\
-				10 &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        &        &        & 0.043  \\
-				50 &$<$0.001&        &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        & 0.043  \\
-				150 &$<$0.001&        &        &        &$<$0.001&$<$0.001& 0.042  & 0.043  & 0.043  \\
-				500 &$<$0.001&        &        &        &        &        & 0.003  & 0.003  & 0.043  \\
-				1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
+   1 & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.083  & 0.095  & 0.099  \\
+  10 &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        &        &        & 0.099  \\
+  50 &$<$0.001&        &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        & 0.099  \\
+ 150 &$<$0.001&        &        &        &$<$0.001&$<$0.001& 0.083  & 0.095  & 0.099  \\
+ 500 &$<$0.001&        &        &        &        &        & 0.043  & 0.056  & 0.099  \\
+1000 &$<$0.001&        &        &        &        &        &        & 0.056  & 0.099  \\
 				\hline
 			\end{tabular}}
 			\caption%[][5cm]
-			{Minimal width of the pseudo-scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+			{Minimal width of the pseudo-scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
 			\label{tab:widthP}
 		\end{table}
 		
