changed cite to ref
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@417 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -240,7 +240,7 @@ related parameters would be made.
 
 \subsubsection{Implementation of the CKKW-L merging}
 \label{sec:match_implementation}
-To illustrate the settings related to merging different multipliticities, the EFT D5 samples were generated with \madgraph version 2.2.2 and showered in \pythiaEight.201, using the Madgraph parameters in the previous section (Sec.~\cite{sub:MadgraphParameters}).
+To illustrate the settings related to merging different multipliticities, the EFT D5 samples were generated with \madgraph version 2.2.2 and showered in \pythiaEight.201, using the Madgraph parameters in the previous section (Sec.~\ref{sub:MadgraphParameters}).
 
 
 The \pythiaEight parameters for the CKKW-L $k_T$-merging scheme are:
