fixing of references
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@419 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -61,7 +61,7 @@
       title          = "{Simplified dark matter top-quark interactions at the
                         LHC}",
       year           = "2015",
-      eprint         = "1503.00691",
+      journal         = "arXiv:1503.00691",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "OUTP-15-02P, CERN-PH-TH-2014-253",
@@ -83,7 +83,7 @@
       SLACcitation   = "%%CITATION = ARXIV:1310.4491;%%",
 }
 
-@article{ATL-PHYS-PUB-2014-007,
+@techreport{ATL-PHYS-PUB-2014-007,
       author        = "{ATLAS Collaboration}",
       title         = "{Sensitivity to WIMP Dark Matter in the Final States
                        Containing Jets and Missing Transverse Momentum with the
@@ -94,9 +94,8 @@
       month         = "Jun",
       year          = "2014",
       reportNumber  = "ATL-PHYS-PUB-2014-007",
-      url           = "https://cds.cern.ch/record/1708859",
+      url           = "http://cds.cern.ch/record/1708859",
 }
-
 
 
 %%%%%%%%%%%%%%%%EFT references
@@ -325,7 +324,7 @@
       title          = "{Interplay and Characterization of Dark Matter Searches
                         at Colliders and in Direct Detection Experiments}",
       year           = "2014",
-      eprint         = "1409.4075",
+      journal         = "arXiv:1409.4075",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       reportNumber   = "KCL-PH-TH-2014-37, LCTS-2014-36, CERN-PH-TH-2014-180",
@@ -451,7 +450,7 @@
       author         = "Racco, Davide and Wulzer, Andrea and Zwirner, Fabio",
       title          = "{Robust collider limits on heavy-mediator Dark Matter}",
       year           = "2015",
-      eprint         = "1502.04701",
+      journal         = "arXiv:1502.04701",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "CERN-PH-TH-2015-014, DFPD-2015-TH-05",
@@ -731,20 +730,23 @@
 }
 
 @misc{ForumSVN,
+        key = {Forum Model Repository},
 	title = {{SVN repository for model, input and parameter cards for models considered in the ATLAS/CMS Dark Matter Forum studies}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/}",
+	howpublished = {\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/}},
 	year = {2015}, 
 	note = "[Online; accessed 13-June-2015]"
 }
 
 @misc{ForumSVN_DMV,
+        key = {Forum Model Repository DMV},
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of vector mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}",
+	howpublished = {\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}},
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
 
 @misc{ForumSVN_DMA,
+        key = {Forum Model Repository DMA},
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of axial vector mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMA/}",
 	year = {2015}, 
@@ -752,14 +754,16 @@
 }
 
 @misc{ForumSVN_DMS,
+        key = {Forum Model Repository DMS},
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar and pseudoscalar
-	coupling to the quarks in a Yukawa-like way, at NLO.}},
+	coupling to the quarks in a Yukawa-like way, at NLO}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
 
 @misc{ForumSVN_DMP_tloop,
+        key = {Forum Model Repository DMP_tloop},
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator,
 	coupling to the quarks through a top loop}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP_tloop/}",
@@ -768,14 +772,15 @@
 }
 
 @misc{ForumSVN_DMS_tloop,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator,
-	}},
+        key = {Forum Model Repository DMS_tloop},
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS_tLoop/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
 
 @misc{ForumSVN_DMGG,
+        key = {Forum Model Repository DMGG},
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator, with "effective" coupling from gluon loop}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
 	year = {2015}, 
@@ -783,6 +788,7 @@
 }
 
 @misc{ForumSVN_EW_DMV,
+        key = {Forum Model Repository EW_DMV},
 	title = {{SVN repository for Madgraph input cards for model with s-channel exchange of vector mediator, for electroweak boson final states}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_DMV/}",
 	year = {2015}, 
@@ -790,6 +796,7 @@
 }
 
 @misc{ForumSVN_TChannel_PapucciVichiZurek,
+        key = {Forum Model Repository TChannel-1},
 	title = {{SVN repository for Madgraph inputs with t-channel exchange of colored scalar mediator, couplings to light quarks only}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_PapucciVichiZurek/}",
 	year = {2015}, 
@@ -797,6 +804,7 @@
 }
 
 @misc{ForumSVN_TChannel_Amelia,
+        key = {Forum Model Repository TChannel-2},
 	title = {{SVN repository for Madgraph inputs with t-channel exchange of colored scalar mediator, couplings to all quark generations}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_Amelia_Brennan/}",
 	year = {2015}, 
@@ -805,6 +813,7 @@
 
 
 @misc{ForumSVN_DMTTBar,
+        key = {Forum Model Repository DMTTBar},
 	title = {{SVN repository for Madgraph inputs for model with s-channel exchange of pseudo-scalar mediator, produced in association with top quarks}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_S%2BPS/}",
 	year = {2015}, 
@@ -812,6 +821,7 @@
 }
 
 @misc{ForumSVN_DMSingleB,
+        key = {Forum Model Repository DMSingleB},
 	title = {{SVN repository for Madgraph inputs for simplified model with a colored scalar mediator coupling to DM and b-quarks}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_S%2BPS/}",
 	year = {2015}, 
@@ -819,6 +829,7 @@
 }
 
 @misc{ForumSVN_EWEFTD7,
+        key = {Forum Model Repository EWEFTD7},
 	title = {{SVN repository for Madgraph inputs for dimension-7 EFT models with direct DM-EW boson couplings}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Fermion_D7/contributed_by_Renjie_Wang/}",
 	year = {2015}, 
@@ -826,6 +837,7 @@
 }
 
 @misc{ForumSVN_EWMonoHiggs,
+        key = {Forum Model Repository EWMonoHiggs},
 	title = {{SVN repository for Madgraph inputs for vector and scalar mediator models leading to a mono-Higgs signature}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_all/}",
 	year = {2015}, 
@@ -833,6 +845,7 @@
 }
 
 @misc{ForumSVN_EWMonoHiggs_2HDM,
+        key = {Forum Model Repository EWMonoHiggs-2HDM},
 	title = {{SVN repository for Madgraph inputs for 2HDM model leading to a mono-Higgs signature}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_2HDM/}",
 	year = {2015}, 
@@ -841,6 +854,7 @@
 
 
 @misc{ForumSVN_EWMonoTop,
+        key = {Forum Model Repository EWMonoTop},
 	title = {{SVN repository for Madgraph inputs for mono-top models}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_SingleTop/}",
 	year = {2015}, 
@@ -848,6 +862,7 @@
 }
 
 @misc{ForumSVN_monoHEFTD5,
+        key = {Forum Model Repository monoHEFTD5},
 	title = {{SVN repository for Madgraph inputs for mono-Higgs EFT models, dimension 4 and 5}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_D4D5/}",
 	year = {2015}, 
@@ -893,7 +908,7 @@
 	title          = "{A framework to create customised LHC analyses within
 	CheckMATE}",
 	year           = "2015",
-	eprint         = "1503.01123",
+	journal         = "arXiv:1503.01123",
 	archivePrefix  = "arXiv",
 	primaryClass   = "hep-ph",
 	reportNumber   = "IFT-UAM-CSIC-15-021",
@@ -920,7 +935,7 @@
 }
 
 @article{Conte:2014zja,
-	author         = "Conte, Eric and Dumont, Béranger and Fuks, Benjamin and
+	author         = "Conte, Eric and Dumont, B{\'e}ranger and Fuks, Benjamin and
 	Wymant, Chris",
 	title          = "{Designing and recasting LHC analyses with MadAnalysis
 	5}",
@@ -1391,7 +1406,7 @@
 	note = "{http://rivet.hepforge.org}",
 }
 
-@article{ATOM,
+@unpublished{ATOM,
 	author         = "Kim, I.-W.  and Papucci, M. and Sakurai, K. and Weiler, A.",
 	title          = "{ATOM: Automated Testing Of Models}", 
 	journal        = "{to appear}",      
@@ -1496,7 +1511,7 @@
       author         = "Kopp, Joachim",
       title          = "{Collider Limits on Dark Matter}",
       year           = "2011",
-      eprint         = "1105.3248",
+      journal         = "arXiv:1105.3248",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "FERMILAB-CONF-11-219-T",
@@ -1652,7 +1667,7 @@
       SLACcitation   = "%%CITATION = ARXIV:0906.1609;%%",
 }
 @article{Goudelis:2013uca,
-      author         = "Goudelis, A. and Herrmann, B. and Stål, O.",
+      author         = "Goudelis, A. and Herrmann, B. and St{\r{o}}l, O.",
       title          = "{Dark matter in the Inert Doublet Model after the
                         discovery of a Higgs-like boson at the LHC}",
       journal        = "JHEP",
@@ -1877,7 +1892,7 @@
 }
 
 @article{Sjostrand:2014zea,
-      author         = "Sjöstrand, Torbjörn and Ask, Stefan and Christiansen,
+      author         = "Sj{\"o}strand, Torbj{\"o}rn and Ask, Stefan and Christiansen,
                         Jesper R. and Corke, Richard and Desai, Nishita and
                         others",
       title          = "{An Introduction to PYTHIA 8.2}",
@@ -1911,7 +1926,7 @@
 
 
 @article{Sjostrand:2006za,
-      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+      author         = "Sj{\"o}strand, Torbj{\"o}rn and Mrenna, Stephen and Skands, Peter
                         Z.",
       title          = "{PYTHIA 6.4 Physics and Manual}",
       journal        = "JHEP",
@@ -1930,7 +1945,7 @@
       author         = "Whalley, M.R. and Bourilkov, D. and Group, R.C.",
       title          = "{The Les Houches accord PDFs (LHAPDF) and LHAGLUE}",
       year           = "2005",
-      eprint         = "hep-ph/0508110",
+      journal         = "arXiv:hep-ph/0508110",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = HEP-PH/0508110;%%",
@@ -1953,7 +1968,7 @@
       SLACcitation   = "%%CITATION = HEP-PH/0611129;%%",
 }
 
-@article{DMatLHCProceedings,
+@unpublished{DMatLHCProceedings,
 		author         = "Abdallah, Jalal and Araujo, Henrique and Arbey, Alexandre
 		and Ashkenazi, Adi and Belyaev, Alexander and others",
 		title          = "{Simplified Models for Dark Matter Searches at the LHC}",
@@ -1989,7 +2004,7 @@
 @article{Khachatryan:2014rra,
 	author         = "Khachatryan, Vardan and others",
 	title          = "{Search for dark matter, extra dimensions, and
-	unparticles in monojet events in proton–proton
+	unparticles in monojet events in proton$-$proton
 	collisions at $\sqrt{s} = 8$ TeV}",
 	collaboration  = "CMS",
 	journal        = "Eur.Phys.J.",
@@ -2604,7 +2619,8 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 
 
 @misc{NewMadgraphModels,
-	title = {Simplified dark matter models at NLO, UFO for Feynrules2.3 and \madgraph. v0.1\_alpha: alpha version},
+        key = {New Madgraph Models},
+	title = {{Simplified dark matter models at NLO, UFO for Feynrules2.3 and \madgraph. v0.1\_alpha: alpha version}},
 	howpublished = "\url{https://feynrules.irmp.ucl.ac.be/wiki/DMsimp}",
 	year = {2015}, 
 	note = "[Online; accessed 12-June-2015]"
@@ -2640,6 +2656,7 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 }
 
 @misc{HEPData,
+        key = {Durham HEPDATA Project},
 	title = {{The Durham HepData Project}},
 	howpublished = "\url{http://hepdata.cedar.ac.uk/abouthepdata}",
 	year = {2015}, 
@@ -2647,6 +2664,7 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 }
 
 @misc{PDF4LHC,
+        key = {PDF4LHC},
 	title = {{PDF4LHC: Recommendation for LHC cross section calculations}},
 	howpublished = "\url{http://www.hep.ucl.ac.uk/pdf4lhc/}",
 	year = {2015}, 
@@ -2654,6 +2672,7 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 }
 
 @misc{INSPIRE,
+        key = {Inspire},
 	title = {{INSPIRE: High-Energy Physics Literature Database}},
 	howpublished = "\url{http://inspirehep.net}",
 	year = {2015}, 
@@ -2661,7 +2680,7 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 }
 
 @article{Sjostrand:2007gs,
-	author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+	author         = "Sj{\"o}strand, Torbj{\"o}rn and Mrenna, Stephen and Skands, Peter
 	Z.",
 	title          = "{A Brief Introduction to PYTHIA 8.1}",
 	journal        = "Comput.Phys.Commun.",
@@ -2811,6 +2830,7 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 }
 
 @misc{PGS,
+        key = {PGS},
 	title = {{PGS: simulation of a generic high-energy physics collider detector}},
 	howpublished = "\url{http://www.physics.ucdavis.edu/~conway/research/software/pgs/pgs4-general.htm}",
 	year = {2015}, 
