--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -22,6 +22,8 @@
 \usepackage{longtable} %for ttbar 
 \usepackage{slashed}
 \usepackage{amsfonts}
+\usepackage[T1]{fontenc}
+%%\usepackage{fontspec}
 \usepackage{amsmath,amssymb}
 \usepackage{slashed}
 %%\usepackage{feynmp}
