--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -94,7 +94,7 @@ experiments as well as relic density constraints.
 The idea of an inert Two-Higgs Doublet Model (IDM) was introduced
 more than 30 years ago in Ref~\cite{Deshpande:1977rw}. The IDM was
 first proposed as a Dark Matter model in Ref.~\cite{IDMnaturalness} and its
-phenomenology further studied in Refs.~\cite{LopezHonorez:2006gr,ScalarMultiplet,IDMnewviable,IDMgammalines,Dolle:2009fn,ATL-PHYS-PUB-2014-007IDMnu1,IDMnu2,IDMpos,IDMVIB,Goudelis:2013uca,Belyaev:2015tap}. It is an extension of the SM with a second scalar 
+phenomenology further studied in Refs.~\cite{LopezHonorez:2006gr,ScalarMultiplet,IDMnewviable,IDMgammalines,Dolle:2009fn,ATL-PHYS-PUB-2014-007,IDMnu1,IDMnu2,IDMpos,IDMVIB,Goudelis:2013uca,Belyaev:2015tap}. It is an extension of the SM with a second scalar 
 doublet $\phi_2$ with no direct coupling to fermions.  This doublet has a discrete $Z_2$ symmetry, 
 under which $\phi_2$ is odd and all the other fields are even. 
 The Lagrangian of the odd sector is,
