Almost final changes.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@421 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -26,8 +26,8 @@
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:j.beacham@cern.ch}{James Beacham} 
 \emph{Ohio State University, USA}\\
-\noindent\href{mailto:a.belyaev@soton.ac.uk}{Alexander S. Belyaev} 
-\emph{School of Physics and Astronomy, University of Southampton, United Kingdom}\\
+\noindent\href{mailto:Alexander.Belyaev@cern.ch}{Alexander Belyaev} 
+\emph{Rutherford Appleton Laboratory and University of Southampton, United Kingdom}\\
 \noindent\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia (editor)} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:amelia.jean.brennan@cern.ch}{Amelia Jean Brennan} 
@@ -85,7 +85,7 @@
 \noindent\href{mailto:cfischer@ifae.es}{Cora Fischer} 
 \emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:Henning.Flacher@cern.ch}{Henning Flaecher} 
-\emph{H.H. Wills Physics Laboratory, University of Bristol, UK}\\
+\emph{H.H. Wills Physics Laboratory, University of Bristol, United Kingdom}\\
 \noindent\href{mailto:pjfox@fnal.gov}{Patrick J. Fox} 
 \emph{Fermilab, USA}\\
 \noindent\href{mailto:Benjamin.Fuks@cern.ch}{Benjamin Fuks} 
@@ -115,7 +115,7 @@
 \noindent\href{mailto:dylan.hsu@cern.ch}{Dylan George Hsu} 
 \emph{MIT, USA}\\
 \noindent\href{mailto:schsu@uw.edu}{Shih-Chieh Hsu} 
-\emph{University of Washington, USA}\\
+\emph{Physics, University of Washington, Seattle, USA}\\
 \noindent\href{mailto:Yutaro.Iiyama@cern.ch}{Yutaro Iiyama} 
 \emph{MIT, USA}\\
 \noindent\href{mailto:valerio.ippolito@cern.ch}{Valerio Ippolito} 
@@ -144,6 +144,8 @@
 \emph{Institut f\"ur Hochenergiephysik, \"Osterreichische Akademie der Wissenschaften, Austria}\\
 \noindent\href{mailto:shuichi.kunori@ttu.edu}{Shuichi Kunori} 
 \emph{Texas Tech University, USA}\\
+\noindent\href{mailto:viktor.kutzner@physik.rwth-aachen.de}{Viktor Kutzner} 
+\emph{RWTH Aachen University, III. Physikalisches Institut A, Germany}\\
 \noindent\href{mailto:hminlee@cau.ac.kr}{Hyun Min Lee} 
 \emph{Department of Physics, Chung-Ang University, Korea}\\
 \noindent\href{mailto:sungwon.lee@cern.ch}{Sung-Won Lee} 
@@ -158,6 +160,8 @@
 \emph{Laboratoire de Physique Corpusculaire, Clermont-Ferrand, France}\\
 \noindent\href{mailto:sarah.malik@cern.ch}{Sarah Malik (editor)} 
 \emph{Imperial College London, United Kingdom}\\
+\noindent\href{mailto:Fabio.Maltoni@cern.ch}{Fabio Maltoni} 
+\emph{Centre for Cosmology, Particle Physics and Phenomenology (CP3), Universit\'e catholique de Louvain, Belgium}\\
 \noindent\href{mailto:mmp@ifae.es}{Mario Martinez Perez} 
 \emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:o.p.c.mattelaer@durham.ac.uk}{Olivier Mattelaer} 
@@ -172,7 +176,7 @@
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:mrenna@fnal.gov}{Stephen Mrenna (editor)} 
 \emph{FNAL, USA}\\
-\noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M Narayanan} 
+\noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M. Narayanan} 
 \emph{MIT, USA}\\
 \noindent\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson} 
 \emph{University of California, Irvine, USA}\\
@@ -250,7 +254,9 @@
 \emph{Enrico Fermi Institute and Department of Physics and Kavli Institute for Cosmological Physics, University of Chicago, USA}\\
 \noindent\href{mailto:renjie.wang@cern.ch}{Ren-Jie Wang} 
 \emph{Department of Physics, Northeastern University, USA}\\
-\noindent\href{mailto:steven.worm@cern.ch}{Steve Worm} 
+\noindent\href{mailto:alokin@uw.edu}{Nikola  Whallon} 
+\emph{Physics, University of Washington, Seattle, USA}\\
+\noindent\href{mailto:steven.worm@cern.ch}{Steven Worm} 
 \emph{Particle Physics Department, Rutherford Appleton Laboratory, United Kingdom}\\
 \noindent\href{mailto:mengqing.wu@cern.ch}{Mengqing Wu} 
 \emph{Laboratoire de Physique Subatomique et de Cosmologie, Universit\'e Grenoble-Alpes, CNRS/IN2P3, France}\\
@@ -270,5 +276,3 @@
 \emph{Laboratoire de l'Acc\'el\'erateur Lin\'eaire, Univ. Paris-Sud 11 et IN2P3/CNRS, France}\\
 \noindent\href{mailto:a.zucchetta@cern.ch}{Alberto Zucchetta} 
 \emph{Universit\`a di Padova, Italy}\\
-\noindent\href{mailto:kzurek@berkeley.edu}{Kathryn Zurek} 
-\emph{Berkeley Center for Theoretical Physics, University of California, Berkeley, and Theoretical Physics Group, Lawrence Berkeley National Laboratory, USA}\\
