fixed some bugs in references
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@424 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1409,7 +1409,7 @@
 @unpublished{ATOM,
 	author         = "Kim, I.-W.  and Papucci, M. and Sakurai, K. and Weiler, A.",
 	title          = "{ATOM: Automated Testing Of Models}", 
-	journal        = "{to appear}",      
+	note           = "{to appear}",
 }
 
 @article{Cranmer:2010hk,
@@ -1604,7 +1604,7 @@
 }
 @article{Belyaev:2015tap,
       author = "Belyaev, A. and Cacciapaglia, G. and Ivanov, I. and Rojas, F. and Thomas, M.",
-      pages = "to appear",
+      title = "to appear",
 }
 
 
@@ -1866,12 +1866,18 @@
 
 # Reference for treatment of width
 
-@article{Bardin:1989qr,
-      author         = "Bardin, Dmitri Yu. and Bilenky, Mikhail S. and Beenakker,
-                        W. and Berends, Frits A. and van Neerven, W.L. and others",
-      title          = "{Z LINE SHAPE}",
-      year           = "1989",
+@inproceedings{Bardin:1989qr,
+      author        = "Bardin, Dimitri Yuri and Bilenky, S M and Beenakker, W and
+                       Berends, F A and van Neerven, W L and Van der Marck, S C
+                       and Burgers, G and Hollik, Wolfgang F L and Riemann, Tord
+                       and Sachwitz, M",
+      title         = "{Z line shape}",
+      bookTitle     = "{Workshop on Z Physics at LEP1 : General Meetings, vol. 1 : Standard Physics}",
       reportNumber   = "CERN-TH-5468-89",
+      pages         = "43 p",
+      month         = "Jul",
+      year          = "1989",
+      url           = "http://cds.cern.ch/record/199969",
       SLACcitation   = "%%CITATION = CERN-TH-5468-89 ETC.;%%",
 }
 
@@ -3046,6 +3052,22 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	reportNumber   = "IFT-9-2012",
 	SLACcitation   = "%%CITATION = ARXIV:1212.4100;%%",
 }
+@article{IDMposthiggs, 
+      author         = "Goudelis, A. and Herrmann, B. and Stål, O.", 
+      title          = "{Dark matter in the Inert Doublet Model after the 
+                        discovery of a Higgs-like boson at the LHC}", 
+      journal        = "JHEP", 
+      volume         = "1309", 
+      pages          = "106", 
+      doi            = "10.1007/JHEP09(2013)106", 
+      year           = "2013", 
+      eprint         = "1303.3010", 
+      archivePrefix  = "arXiv", 
+      primaryClass   = "hep-ph", 
+      reportNumber   = "LAPTH-006-13", 
+      SLACcitation   = "%%CITATION = ARXIV:1303.3010;%%", 
+} 
+
 @article{IDMdileptonsII,
 	author         = "Belanger, Genevieve and Dumont, Beranger and Goudelis,
 	Andreas and Herrmann, Bjorn and Kraml, Sabine and others",
@@ -3058,5 +3080,3 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	reportNumber   = "LAPTH-015-15, CTPU-15-04, LPSC-15084",
 	SLACcitation   = "%%CITATION = ARXIV:1503.07367;%%",
 }
-
-
