--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -436,7 +436,7 @@ split evenly between the light DM particles and the quark, leading to a broad en
 	\subfloat[Leading jet \pT distribution for a 2 TeV \tchannel mediator with small ($g$=0.5) to large ($g$=7) couplings with a DM mass of 1 GeV]{
 		\includegraphics[width=0.8\textwidth]{figures/monojet/tchannel_edge}
 		\label{fig:monojet_tchannel_edge}}
-	\caption[][14pt]{Kinematic distributions normalized to unit area from the \tchannel model from Ref.~\cite{Bell:2012rg}, using MadAnalysis \cite{} and simplified
+	\caption[][14pt]{Kinematic distributions normalized to unit area from the \tchannel model from Ref.~\cite{Bell:2012rg}, using MadAnalysis \cite{Conte:2012fm,Conte:2014zja} and simplified
 		analysis cuts on the leading jet \pT$>$150 GeV and $\eta <$ 2.8, \MET{}$>$150 GeV. For these models, a LO UFO model is interfaced to \madgraph{} v2.2.3, and studies are at parton-level only. }
 	\label{fig:monojet_tchannel}
 \end{figure}
