removed an empty citation
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@425 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/SummaryTable.tex
+++ b/doc/tex/SummaryTable.tex
@@ -32,7 +32,7 @@
 	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} &  \parbox{3.5cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} } \\ 
 	& LO+PS, top loop (\textit{DMsimp} UFO + \madgraph v.2.3.0) & \cite{NewMadgraphModels} & \parbox{3.5cm} {\cite{Alwall:2014hca,Hirschi:2011pa,Alloul:2013bka,Degrande:2011ua} }\\ 		
 	& LO, top loop (\mcfm v7.0) & Upon request & \cite{Fox:2012ru,Harris:2014hga} \\ [5pt] 
-	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) & \cite{} & \parbox{3.5cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ [5pt] 
+	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) & & \parbox{3.5cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ [5pt] 
     $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) &  \cite{ForumSVN_DMTTBar} & \parbox{3.5cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
     	& NLO+PS (\textit{DMsimp} UFO + \madgraph v2.3.0) & \cite{NewMadgraphModels} & \parbox{3.5cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ 		
 
