--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -58,7 +58,7 @@
 \usepackage{refcount}
 \usepackage{calc}
 \usepackage{lastpage}
-\usepackage{natbib} % for \citep
+%\usepackage{natbib} % for \citep
 % create a dummy file (shell command "touch moderntex") to turn on some features that don't work on lxplus
 \IfFileExists{moderntex}{
   \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
@@ -113,9 +113,30 @@
 %	marginparwidth=39.4mm % width of margin notes
 %}
 
+\usepackage{etex}
+\reserveinserts{20}
+%,backref=true,maxcitenames=3,maxbibnames=3,
+\usepackage[hyperref=true,url=false,backend=bibtex,style=alphabetic,backref=false,firstinits=true,doi=true,eprint=true,date=year]{biblatex}
+% biblatex commands follow from example by Ian Brock (ian.brock@cern.ch)
+\DeclareFieldFormat[article]{journaltitle}{#1\isdot}
+\DeclareFieldFormat[article]{journalsubtitle}{#1\isdot}
+\DeclareFieldFormat[article]{volume}{\textbf{#1}\isdot}
+\renewcommand*{\newunitpunct}{\addcomma\space}
+\renewbibmacro{in:}{}
+\renewcommand{\bibpagespunct}{\space}
+\DefineBibliographyStrings{UKenglish}{%
+  page = {},
+  pages = {}
+}
+\DefineBibliographyStrings{USenglish}{%
+  page = {},
+  pages = {}
+}
+\addbibresource{doc.bib}
+
 \begin{document}
 
-\morefloats
+%\morefloats
 \setcounter{secnumdepth}{3} % turn on section numbering, for now (3=subsubsection)
 
 \input{frontmatter.tex}
@@ -174,10 +195,30 @@
 \label{app:Additional_details}
 \input{tex/AdditionalDetails.tex}
 
-%%FIXME: it does not understand Collaboration. Fix here rather than hacking bib file?
+% \chapter{Bibliography}
+% \label{thebibliography}
+%biblatex title case as at http://tex.stackexchange.com/questions/22980/sentence-case-for-titles-in-biblatex
+\newrobustcmd{\MakeTitleCase}[1]{%
+  \ifthenelse{\ifcurrentfield{booktitle}\OR\ifcurrentfield{booksubtitle}%
+    \OR\ifcurrentfield{maintitle}\OR\ifcurrentfield{mainsubtitle}%
+    \OR\ifcurrentfield{journaltitle}\OR\ifcurrentfield{journalsubtitle}%
+    \OR\ifcurrentfield{issuetitle}\OR\ifcurrentfield{issuesubtitle}%
+    \OR\ifentrytype{book}\OR\ifentrytype{mvbook}\OR\ifentrytype{bookinbook}%
+    \OR\ifentrytype{booklet}\OR\ifentrytype{suppbook}%
+    \OR\ifentrytype{collection}\OR\ifentrytype{mvcollection}%
+    \OR\ifentrytype{suppcollection}\OR\ifentrytype{manual}%
+    \OR\ifentrytype{periodical}\OR\ifentrytype{suppperiodical}%
+    \OR\ifentrytype{proceedings}\OR\ifentrytype{mvproceedings}%
+    \OR\ifentrytype{reference}\OR\ifentrytype{mvreference}%
+    \OR\ifentrytype{report}\OR\ifentrytype{thesis}}
+    {#1}
+    {\MakeSentenceCase{#1}}}
 % \bibliographystyle{unsrtnat}
-\bibliographystyle{alpha}
+% \bibliographystyle{dmf}
+%\bibliographystyle{hep}
+%\bibliographystyle{alpha}
 %\bibliographystyle{JHEP}
-\bibliography{doc}
+% \bibliography{doc}
+\printbibliography
 
 \end{document}
