more bibliography fixes
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@427 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1406,8 +1406,9 @@
 
 @unpublished{ATOM,
 	author         = "Kim, I.-W.  and Papucci, M. and Sakurai, K. and Weiler, A.",
-	title          = "{ATOM}: {Automated Testing Of Models}", 
+	title          = "{ATOM}: {Automated Testing Of Models}",
 	note           = "{to appear}",
+    year           = "2015"
 }
 
 @article{Cranmer:2010hk,
@@ -1602,7 +1603,8 @@
 }
 @article{Belyaev:2015tap,
       author = "Belyaev, A. and Cacciapaglia, G. and Ivanov, I. and Rojas, F. and Thomas, M.",
-      title = "to appear",
+      note = "to appear",
+    year           = "2015",
 }
 
 
